# Assistente-de-Investimentos

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  chainlit.md  pyproject.toml
notebooks/: demo.ipynb
src/assistente/: __init__.py  backtest.py  cli.py  config.py  runner.py  schemas.py
src/assistente/agents/: __init__.py  news_agent.py  orchestrator.py  technical_agent.py
src/assistente/tools/: __init__.py  charting.py  indicators.py  market_data.py  news.py  recommendation.py  sentiment.py
tests/: test_indicators.py  test_recommendation.py  test_schemas.py
